# libspng-fuzzer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  afl_minimize_input.sh  fuzz_radamsa.sh  generic_test_asan.out  install.sh  parse_afl_output.py  run_afl.sh  run_fuzzer.sh  run_multiple_zzuf.sh  run_radamsa.sh
fuzz/: decode_dev_zero.c  decode_encode_file.c  generic_test.c  test.c  test_fuzzer_descriptor.c
output/radamsa/: generic_test.out  generic_test_msan.out
output/zzuf/: decode_dev_zero1.out  decode_dev_zero2.out  decode_encode_dev_zero1.out  decode_encode_dev_zero2.out  decode_encode_file2.out  generic_test1.out  generic_test4.out  simple_decode_dev_zero1.out  test_fuzzer_descriptor1.out
radamsa/: Makefile  fuzz_main.c  fuzz_radamsa.sh  fuzz_spng_read.c  fuzz_spng_write.c
results/: radamsa.txt
results/radamsa/: analyzer.ipynb  summary.txt
src/: Makefile  install.sh
src/fuzz/: decode_encode_dev_zero.c  decode_encode_file.c  generic_test.c  in_out.c  simple_decode_dev_zero.c
